# imkoin-wallet

./: .gitmodules  CMakeLists.txt  CryptoNoteWallet.cmake  README.md  ReleaseNotes.txt
src/: CommandLineParser.cpp  CryptoNoteWrapper.cpp  CryptoNoteWrapper.h  CurrencyAdapter.cpp  NodeAdapter.cpp  NodeAdapter.h  PaymentServer.cpp  PaymentServer.h  Settings.cpp  Update.cpp  Update.h  Worker.cpp  cryptonotewallet.rc  karbowanecwallet.desktop  main.cpp  niobiocashwallet.desktop  resources.qrc
src/gui/: AccountFrame.cpp  MainWindow.cpp  OpenUriDialog.cpp  OverviewFrame.cpp  ReceiveFrame.cpp  SendFrame.cpp  SendFrame.h  SendGlassFrame.cpp  TransactionsFrame.cpp
src/gui/ui/: aboutdialog.ui  changelanguagedialog.ui  connectionsettingsdialog.ui  importkeydialog.ui  importtrackingkeydialog.ui  miningframe.ui  newnodedialog.ui  newpooldialog.ui  openuridialog.ui  overviewframe.ui  restorefrommnemonicseeddialog.ui  sendframe.ui  transactionsframe.ui
src/languages/: be.qm  be.ts  de.qm  de.ts  es.qm  es.ts  pl.qm  pl.ts  pt.qm  pt.ts  ru.qm  ru.ts  uk.qm  uk.ts
